appId: id.skippy.wallet.preview
---
- openLink:
    link: ${deeplink}

- runFlow:
    when:
      visible: .*Open in.*
      platform: ios
    commands:
      - tapOn: Open

- repeat:
    times: 6
    commands:
      - tapOn: "Pin number 1"

- waitForAnimationToEnd:
    timeout: 5000

- extendedWaitUntil:
    visible: "Yes, continue"
    timeout: 100000

- tapOn: "Yes, continue"

- waitForAnimationToEnd:
    timeout: 5000

- assertVisible: Verify your account
- tapOn: "Authenticate"

- runFlow:
    when:
      platform: iOS
    commands:
      - assertVisible: .*to Sign In.*
      - tapOn: Continue

- waitForAnimationToEnd:
    timeout: 5000

# Ensure text for conditional flow is visible
- extendedWaitUntil:
    visible: Enter any login|the client is asking you to confirm previously given authorization
    timeout: 15000

# If already signed-in previously
- runFlow:
    when:
      visible: the client is asking you to confirm previously given authorization
    commands:
      - tapOn: Continue

# Has not signed in previously
- runFlow:
    when:
      platform: iOS
      visible: Enter any login

    commands:
      - inputText: "username"
      - tapOn: and password
      - inputText: "password"
      - tapOn:
          text: Sign-in
          index: 1
      - runFlow:
          when:
            visible: Save Password?
          commands:
            - tapOn: Never for This Website
      - tapOn: Continue

- runFlow:
    when:
      platform: Android
      visible: Sign-in
    commands:
      - waitForAnimationToEnd:
          timeout: 15000
      # Depending on the device running the tests, an initial Chrome setup screen may appear.
      # If the screen does not appear, this step is skipped.
      - runFlow:
          when:
            visible: Make Chrome your own
          commands:
            - tapOn: Use without an account

      - extendedWaitUntil:
          visible: "Sign-in"
          timeout: 10000

      - runFlow:
          when:
            visible: Try out your stylus
          commands:
            - tapOn: Cancel

      - tapOn: Enter any login
      - runFlow:
          when:
            visible: Try out your stylus
          commands:
            - tapOn: Cancel
      - inputText: test
      - runFlow:
          when:
            visible: Try out your stylus
          commands:
            - tapOn: Cancel
      - tapOn: and password
      - runFlow:
          when:
            visible: Try out your stylus
          commands:
            - tapOn: Cancel
      - inputText: test
      - runFlow:
          when:
            visible: Try out your stylus
          commands:
            - tapOn: Cancel
      - tapOn:
          text: Sign-in
          index: 1

      - runFlow:
          when:
            visible: Try out your stylus
          commands:
            - tapOn: Cancel

      - tapOn: Continue

- runFlow:
    when:
      visible: "Go back to Skippy Wallet"
    commands:
      - tapOn:
          text: Go back to Skippy Wallet
          index: 1

- extendedWaitUntil:
    visible: "Is the information correct?"
    timeout: 5000

- tapOn: Accept
- assertVisible: Success!

# On Android the button is "Go to wallet" (without space), while on iOS a trailing space is required.
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "Go to wallet"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn: "Go to wallet,  "
- assertVisible: Hello!
